# llama-config

./: .gitignore  .yamllint.yaml  AGENTS.md  config_example.yaml  main.py  notes.md  package-lock.json  package.json  plan_backend.md  plan_frontend.md  pyproject.toml
config_backups/: README.md
dev_tools/: nono_opencode.sh  start_vite.sh
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: ConfigPreviewModal.jsx  Sidebar.jsx  TopBar.jsx
frontend/src/hooks/: useApi.js  useDarkMode.jsx  useStaleConfig.js
frontend/src/pages/: ConfigPage.jsx  DockerPage.jsx  LogsPage.jsx  ModelsPage.jsx
llama_docs/: README.md
logs/: README.md
rules/: docker.md  frontend.md  html-css.md  js-ts.md  parsing_gguf.md  python.md  react.md  testing_practices.md  vite.md
src/: app.py  custom_exceptions.py  main.py  settings.py
src/api/: config_routes.py  docker_routes.py  model_routes.py  models.py  options_routes.py
src/core/: docker_manager.py  model.py  model_scanner.py  option_parser.py  validator.py  yaml_handler.py
tests/: test_api_routes.py  test_app.py  test_docker_manager.py  test_model_scanner.py  test_option_parser.py  test_validator.py  test_yaml_handler.py
