[project]
name = "llama-config"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "ruamel-yaml>=0.19.1",
    "types-docker>=7.1.0.20260409",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "black>=26.3.1",
    "flake8>=7.3.0",
    "pytest>=9.0.3",
    "types-docker>=7.1.0.20260409",
    "yamllint>=1.38.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 88
