[project]
name = "llama-config"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "pydantic[typing-gen]>=2.13.3",
    "pydantic-settings>=2.14.0",
    "ruamel-yaml>=0.19.1",
    "types-docker>=7.1.0.20260409",
    "gguf>=0.18.0",
    "httpx>=0.28.1",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
]

[project.scripts]
app = "src.app:main"

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "black>=26.3.1",
    "flake8>=7.3.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "types-docker>=7.1.0.20260409",
    "yamllint>=1.38.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 88
